# hexgrad-kokoro

./: .gitignore  .gitmodules  AGENTS.md  ANDROID_EXPORT_SUMMARY.md  ANDROID_IMPLEMENTATION_COMPLETE.md  DECISIONS.md  LEARNINGS.md  PLAN.md  PROBLEMS.md  PROGRESS.md  README.md  TODO.md  __init__.py  audio  bad_streaming_vocos_export.ipynb  conversion.ipynb  convert_weights.py  debug_vocoder_dft.py  dev.py  dev_decoder.py  example_usage.py  export_onnx.py  export_parts.py  export_real_vocoder.py  export_tflite.py  f0npredictor_export.ipynb  fixed_norm_test.ipynb  inference_iree.py  int8_quality_eval.py  norm_stats_average.json  onnx_explore.ipynb  onnx_export_android.py  output  package_models.py  prepare_weights.py  pyproject.toml  quantize_int8.py  requirements.txt  streaming_analysis.ipynb  streaming_dev.ipynb  (+11 more)
checkpoints/: config.json
configs/: vocos-kokoro-24khz.yaml
examples/: export_bert.py  export_decoder.py  export_predictor_dur.py  export_predictor_f0n.py  export_text_encoder.py
export/: collect_tcn_distill_data.py  export_baseline_buckets.py  export_bert.py  export_decoder.py  export_fused_lstm_tf.py  export_hybrid_fused_lstm_pipeline.py  export_predictor_dur.py  export_predictor_f0n.py  export_text_encoder.py  generate_baseline_tts.py  package_hybrid_aot.py  parity_baseline_tflite.py  test.txt  train_tcn_distill.py
iree/iree/: main.py  pyproject.toml
kokoro/: __init__.py  convert_vocos_checkpoint_tf.py  custom_stft.py  investigate_chunked_streaming_vocos.py  istftnet.py  model.py  modules.py  pipeline.py  styletts2_losses.py  test_kmodel_decoder_compare.py  test_tf_vocos_from_pytorch_ckpt.py  tf_checkpoint_utils.py  tf_litert_pipeline.py  tf_vocos.py  train_vocos.py  train_vocos_tf.py  validate_tf_quantizations.py  vocoder_data.py  vocos_decoder.py
kokoro/tf/: AGENTS.md  __init__.py  checkpoint_utils.py  convert.py  export.py  investigate_chunked_streaming_vocos_tf.py  model.py  smoke_compare_pt_tf.py  smoke_test_from_pt_ckpt.py  training.py  validate_quant.py
kotlin/: Android_Inference_Specification_onnx.md  Android_Inference_Specification_tflite.md  KokoroStreamingTts.kt  example_onnx_inference.py  example_tflite_inference.py
litert_npu/: LiteRT NPU AOT compilation for Google Tensor.ipynb
onnx2tf_conversion/: main.py  pyproject.toml
