[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro"
version = "0.9.4"
description = "TTS"
readme = "README.md"
authors = [
    { name="hexgrad", email="hello@hexgrad.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "huggingface_hub",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "onnx-graphsurgeon>=0.5.8",
    "onnx2tf>=1.28.7",
    "onnxruntime>=1.23.2",
    "onnxsim>=0.6.2",
    "pip>=25.3",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "tf-keras>=2.20.1",
    "torch>=2.9.0",
    "transformers",
    "onnx==1.19.1",
    "ai-edge-litert>=2.1.0",
    "sng4onnx>=1.0.4",
    "scipy>=1.15.3",
    "matplotlib>=3.10.8",
    "spacy>=3.8.11",
    "typer>=0.21.0",
    "litert-torch>=0.8.0",
    "tensorflow>=2.19.0",
    "torchao>=0.16.0",
    "onnxscript==0.6.2",
    "iree-base-compiler[onnx]>=3.11.0",
    "iree-base-runtime>=3.11.0",
]

[project.scripts]
kokoro = "kokoro.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro"]
only-packages = true

[project.urls]
Homepage = "https://github.com/hexgrad/kokoro"
Repository = "https://github.com/hexgrad/kokoro"

[tool.uv]
concurrent-downloads = 4

