[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro"
version = "0.9.4"
description = "TTS"
readme = "README.md"
authors = [
    { name="hexgrad", email="hello@hexgrad.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.12.8, <3.13"
dependencies = [
    "huggingface_hub",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "onnx-graphsurgeon>=0.5.8",
    "onnx2tf>=2.3.17",
    "onnxruntime>=1.24.3",
    "onnxsim>=0.6.2",
    "pip>=25.3",
    "protobuf==4.25.5",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "tf-keras>=2.19.0",
    "torch>=2.9.0",
    "transformers",
    "onnx>=1.20.0",
    "ai-edge-litert>=2.1.0",
    "sng4onnx>=1.0.4",
    "scipy>=1.15.3",
    "matplotlib>=3.10.8",
    "spacy>=3.8.11",
    "typer>=0.21.0",
    "tensorflow>=2.19.0",
    "torchao>=0.16.0",
    "utmos>=1.1.10",
    "pesq>=0.0.4",
    "torchaudio==2.11.0",
    "onnxscript>=0.6.2",
]

[project.scripts]
kokoro = "kokoro.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro"]
only-packages = true

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'" ]

[tool.uv.workspace]
members = [
    "iree/iree",
]

[project.urls]
Homepage = "https://github.com/hexgrad/kokoro"
Repository = "https://github.com/hexgrad/kokoro"
